[UPD] fixed some

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,6 @@
 <body>
   <div id="root" style="height: 100%"></div>
 </body>
+<script src="https://cdn.wilddog.com/sdk/js/2.5.4/wilddog.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
-<script>
-
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyBWbX3lWu2wdVOrtYu7P1VEaKMtcjO8OQ4",
-    authDomain: "test-55931.firebaseapp.com",
-    databaseURL: "https://test-55931.firebaseio.com",
-    storageBucket: "test-55931.appspot.com",
-    messagingSenderId: "357296275000"
-  };
-  firebase.initializeApp(config);
-</script>
 </html>
